<resources>
    <string name="app_name">EZBooks</string>
    <string name="home">Home</string>
    <string name="upload_book">Upload Book</string>
    <string name="requested_books">Requested Books</string>
    <string name="books_user_sell">Books You Are Selling</string>
    <string name="search_shop">Search Shop</string>
    <string name="change_credentials">Change Credentials</string>
    <string name="verify_account">Verify Your Account</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings:</string>
    <string name="ez_books_store">EZ Books Store:</string>
    <string name="other">Other</string>
    <string name="edit_profile_colon">Edit Profile:</string>
    <string name="upload_an_image">Upload an Image</string>
    <string name="upload_from_device">Upload From Device</string>
    <string name="reset_image">Reset Image</string>
    <string name="phone_number_colon">Phone Number:</string>
    <string name="submit">Submit</string>
    <string name="email_colon">Email:</string>
    <string name="reset">Reset</string>
    <string name="studentaccount_calpoly_edu">studentaccount@calpoly.edu</string>
    <string name="class_standing_colon">Class Standing:</string>
    <string name="phone_number">Phone Number</string>
    <string name="senior">Senior</string>
    <string name="name_colon">Name:</string>
    <string name="books_you_are_selling">Books you are selling:</string>
    <string name="upload_from_camera">Upload From Camera</string>
    <string name="post_a_book_colon">Post a Books to Sell:</string>
    <string name="title_colon">Title:</string>
    <string name="isbn_colon">ISBN:</string>
    <string name="course_colon">Course:</string>
    <string name="instructor_colon">Instructor:</string>
    <string name="title_hint">Title:</string>
    <string name="isbn_hint">ISBN:</string>
    <string name="course_hint">Course:</string>
    <string name="instructor_hint">Instructor:</string>
    <string name="seller_colon">Seller:</string>
    <string name="unrequest">Unrequest</string>
    <string name="report">Report</string>
    <string name="report_a_user_colon">Report a User:</string>
    <string name="reason_for_reporting">Reason for reporting?</string>
    <string name="inappropriate_content">Inappropriate content</string>
    <string name="spam">Spam</string>
    <string name="false_textbook_listing">False Textbook Listing</string>
    <string name="account_fraud">Account Fraud</string>
    <string name="other_colon">Other:</string>
    <string name="if_other_explain">Please explain why:</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="users_who_want_to_buy">Users who want to purchase your book:</string>
    <string name="login">Login</string>
    <string name="account">useremail@calpoly.edu</string>
    <string name="account_name">account name here</string>
    <string name="search_hint">Kotlin in Action</string>
    <string name="password">password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">email</string>
    <string name="create_account">Create Account</string>
    <string name="send_password_reset_email">Send email to reset password</string>
    <string name="your_profile">Your Profile:</string>


</resources>
