<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/ez_books_store"
        android:icon="@drawable/icons8_small_business_80">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/icons8_house_80"
                    android:title="@string/home" />
                <item
                    android:id="@+id/nav_add_listing"
                    android:icon="@drawable/icons8_upload_80"
                    android:title="@string/upload_book" />
                <item
                    android:id="@+id/nav_requested_books"
                    android:icon="@drawable/icons8_sell_50"
                    android:title="@string/requested_books" />
                <item
                    android:id="@+id/nav_books_you_sell"
                    android:icon="@drawable/icons8_sell_stock_50"
                    android:title="@string/books_user_sell" />
                <item
                    android:id="@+id/nav_search_shop"
                    android:icon="@drawable/icons8_search_in_list_24"
                    android:title="@string/search_shop" />
            </group>
        </menu>
    </item>

    <item android:title="@string/settings"
        android:icon="@drawable/icons8_settings_50">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_edit_credentials"
                    android:icon="@drawable/icons8_edit_account_filled_50"
                    android:title="@string/change_credentials" />
                <item
                    android:id="@+id/nav_change_password"
                    android:icon="@drawable/icons8_password_reset_50"
                    android:title="@string/change_password" />
            </group>
        </menu>
    </item>

    <item android:title="@string/other"
        android:icon="@drawable/icons8_ellipsis_filled_50">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_sign_out"
                    android:icon="@drawable/icons8_sign_out_24"
                    android:title="@string/sign_out" />
                <item
                    android:id="@+id/nav_dummy"
                    android:title=""
                    android:visible="false" />
            </group>
        </menu>
    </item>
</menu>