<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_Account_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/edit_profile_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_colon"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <android.support.v7.widget.CardView
        android:id="@+id/upload_image_card"
        android:layout_width="match_parent"
        android:layout_height="183dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/upload_image_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/reported_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="183dp"
                android:text="@string/upload_an_image"
                android:textAppearance="@android:style/TextAppearance.Large"
                app:layout_constraintBottom_toTopOf="@+id/user_account_Image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/user_account_Image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/image_border"
                android:src="@drawable/blank_profile_picture_973460_640"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/upload_image_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reported_user_name" />

            <Button
                android:id="@+id/upload_image_button"
                style="@style/CustomStyleButton"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/user_account_Image"
                android:layout_toStartOf="@+id/reported_user_name"
                android:text="@string/upload_from_device"
                app:layout_constraintBottom_toTopOf="@+id/upload_from_camera_button"
                app:layout_constraintStart_toEndOf="@+id/reported_user_name"
                app:layout_constraintTop_toTopOf="@+id/user_account_Image" />

            <Button
                android:id="@+id/upload_from_camera_button"
                style="@style/CustomStyleButton"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/upload_image_button"
                android:layout_alignStart="@+id/upload_image_button"
                android:text="@string/upload_from_camera"
                app:layout_constraintBottom_toBottomOf="@+id/user_account_Image"
                app:layout_constraintStart_toEndOf="@+id/reported_user_name" />


        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/text_credentials_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_name_label"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name_colon"
                android:textAppearance="@android:style/TextAppearance.Holo.Widget.EditText" />

            <EditText
                android:id="@+id/name_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Jack Skellington"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_number_colon"
                android:textAppearance="@android:style/TextAppearance.Holo.Widget.EditText" />

            <EditText
                android:id="@+id/phone_number_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="555-555-5555"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_email_label"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email_colon"
                android:textAppearance="@android:style/TextAppearance.Holo.Widget.EditText" />

            <EditText
                android:id="@+id/email_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/studentaccount_calpoly_edu"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_class_standing_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/class_standing_colon"
                android:textAppearance="@android:style/TextAppearance.Holo.Widget.EditText" />

            <EditText
                android:id="@+id/class_standing_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/senior"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit_account_changes_button"
                style="@style/CustomStyleButton"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@color/btn_login_bg" />

            <Button
                android:id="@+id/reset_credentials"
                style="@style/CustomStyleButton"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:text="@string/reset" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>