<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/android_image_5"
        tools:ignore="ContentDescription"  />

    <TextView
        android:id="@+id/detail_requested_book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_requested_book_isbn_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/isbn_colon"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/detail_requested_book_isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/detail_requested_book_isbn_lable" />

    <TextView
        android:id="@+id/detail_requested_book_course_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/course_colon"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/detail_requested_book_isbn" />

    <TextView
        android:id="@+id/detail_requested_book_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/detail_requested_book_course_label" />

    <TextView
        android:id="@+id/detail_requested_book_instructor_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/instructor_colon"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/detail_requested_book_course" />

    <TextView
        android:id="@+id/detail_requested_book_instructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/detail_requested_book_instructor_lable" />

    <TextView
        android:id="@+id/detail_requested_book_seller_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="101dp"
        android:text="@string/seller_colon"
        app:layout_constraintBottom_toTopOf="@+id/detail_requested_book_seller"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/detail_requested_book_seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@+id/detail_requested_book_seller_label"
        app:layout_constraintTop_toBottomOf="@+id/detail_requested_book_seller_label" />

    <TextView
        android:id="@+id/detail_requested_book_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/email_colon"
        app:layout_constraintStart_toStartOf="@+id/detail_requested_book_seller_label"
        app:layout_constraintTop_toBottomOf="@+id/detail_requested_book_seller" />

    <TextView
        android:id="@+id/detail_requested_book_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@+id/detail_requested_book_email_label"
        app:layout_constraintTop_toBottomOf="@+id/detail_requested_book_email_label" />

    <Button
        android:id="@+id/unrequest_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unrequest"
        app:layout_constraintBottom_toBottomOf="@+id/report_button"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/report_button" />

    <Button
        android:id="@+id/report_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="150dp"
        android:text="@string/report"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/unrequest_button"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/detail_requested_book_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/phone_number_colon"
        app:layout_constraintStart_toStartOf="@+id/detail_requested_book_email_label"
        app:layout_constraintTop_toBottomOf="@+id/detail_requested_book_email" />

    <TextView
        android:id="@+id/detail_requested_book_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@+id/detail_requested_book_phone_label"
        app:layout_constraintTop_toBottomOf="@+id/detail_requested_book_phone_label" />
</android.support.constraint.ConstraintLayout>